Add multi author support

--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -38,6 +38,22 @@
   a&:hover
     color: color-link
 
+.article-author
+  margin-top: 1.5rem
+  padding: 0.5rem 0
+  border-top: 1px solid #ddd
+  border-bottom: 1px solid #ddd
+  a
+    color: #333
+    font-weight: bold
+    text-decoration: none
+    margin-right: 0.2rem;
+    vertical-align: middle
+
+.article-author-description
+  opacity: 0.4
+  vertical-align: middle
+
 .article-entry
   @extend $base-style
   clearfix()
