Add multi author support (#1)
* Add multi author support

* Change author div position

* Create README.md

* Add more fields for author

--- a/themes/landscape/layout/_partial/post/title.ejs
+++ b/themes/landscape/layout/_partial/post/title.ejs
@@ -13,3 +13,13 @@
     </h1>
   <% } %>
 <% } %>
+<% if (author && post.author) { %>
+  <div class="article-author">
+    <img src="<%- gravatar(post.author.email, 48) %>">
+    <div class="article-author-info">
+      <a href="<%- config.root %><%- 'author/' + post.authorId %>" class="article-author-name"><%- post.author.name %></a>
+      <a href="<%- post.author.site %>" class="article-author-site" title="Visit the author's site">[site]</a>
+      <div class="article-author-about" title="<%- post.author.about %>"><%- post.author.about %></div>
+    </div>
+  </div>
+<% } %>
